--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         copies: _.range(0, 1),
         type:"student",
         name:"Evan O'Malley",
-        img:"pictures/Student-EvanO.png",
+        img:"students/Student-EvanO.png",
         flavorText:"Make a card game?  I could probably do that",
         stats: [
           "Base Commit + 1",
@@ -26,7 +26,7 @@
 
         type:"student",
         name:"Brian To",
-        img:"Students/Brian.jpg",
+        img:"students/Brian.jpg",
         flavorText:"Saulent of SWAG!! SOS!!!",
         stats: [
           "Base Commit + 1",
