commented out extra code

--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
     </div>
   </div>
 
-  <div class="card student">
+  <!-- <div class="card student">
     <span class="name">Evan O'Malley</span>
     <div class='image-border'><img src="students/Evan_O'Malley.png"></div>
     <div class="flavor-text">Make a card Game? I could probably do that.</div>
-    <!-- <div class="text" data-text="Base Commit + 1
+    <div class="text" data-text="Base Commit + 1
 
-Desktop Commit + 2"></div> -->
-        <div class="Aligner">
-      <div class="Aligner-item Aligner-item--fixed">
+        Desktop Commit + 2"></div>
+    <div class="Aligner">
+    <div class="Aligner-item Aligner-item--fixed">
         <p>abcs</p>
         <p>lol</p>
       </div>
@@ -76,6 +76,6 @@ Desktop Commit + 2"></div> -->
     <div class="text" data-text="Type: Desktop
 
 Commits Required: 18"></div>
-  </div>
+  </div> -->
 </body>
 </html>
