changed pictures file directory

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="flavor-text">{{card.flavorText}}</div>
       <div class="Aligner">
         <div class="Aligner-item Aligner-item--fixed">
-          <p ng-repeat="text in card.abilties">{{text}}</p>
+          <p ng-repeat="text in card.abilities">{{text}}</p>
         </div>
       </div>
     </div>
